@@ -408,6 +408,7 @@ MULTI_GROUP(smsc,
     OCTSTR(generic-message-sent)
     OCTSTR(generic-status-sent)
     OCTSTR(generic-status-error)
+    OCTSTR(generic-foreign-id-regex)
 )
 
 
